// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginScreen one-time code step 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#F3F5F8",
          "flex": 1,
        },
        {
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 47,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "padding": 16,
              "paddingBottom": 50,
            },
            undefined,
          ]
        }
        keyboardShouldPersistTaps="handled"
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "paddingTop": 48,
                },
                {
                  "minHeight": 154.46610169491527,
                },
              ]
            }
          >
            <Image
              accessible={true}
              aria-label="NOMOS"
              resizeMode="contain"
              source={
                {
                  "testUri": "../../../apps/mobile/assets/nomos-logo.png",
                }
              }
              style={
                {
                  "height": 90.46610169491527,
                  "width": 400,
                }
              }
            />
          </View>
          <View
            style={
              [
                {
                  "alignItems": undefined,
                  "flex": undefined,
                  "flexDirection": "column",
                  "flexWrap": undefined,
                  "gap": 24,
                  "justifyContent": undefined,
                  "padding": undefined,
                  "paddingHorizontal": undefined,
                  "paddingVertical": undefined,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": undefined,
                    "flex": undefined,
                    "flexDirection": "column",
                    "flexWrap": undefined,
                    "gap": 4,
                    "justifyContent": undefined,
                    "padding": undefined,
                    "paddingHorizontal": undefined,
                    "paddingVertical": undefined,
                  },
                  undefined,
                ]
              }
            >
              <Text
                role="heading"
                style={
                  [
                    {
                      "fontFamily": "CormorantGaramond_700Bold",
                      "fontSize": 24,
                      "letterSpacing": -0.2,
                      "lineHeight": 32,
                    },
                    {
                      "color": "#161C26",
                    },
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                Check your email
              </Text>
              <Text
                style={
                  [
                    {
                      "fontFamily": "Inter_400Regular",
                      "fontSize": 16,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#4A576A",
                    },
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                Enter the one-time code we sent to amara@example.org.
              </Text>
            </View>
            <View>
              <Text
                aria-hidden={true}
                style={
                  [
                    {
                      "fontFamily": "Inter_600SemiBold",
                      "fontSize": 15,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#161C26",
                    },
                    undefined,
                    undefined,
                    {
                      "marginBottom": 4,
                    },
                  ]
                }
              >
                One-time code
              </Text>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "gap": 8,
                      "minHeight": 44,
                      "paddingHorizontal": 12,
                    },
                    false,
                    {
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#5E6D82",
                    },
                    false,
                  ]
                }
              >
                <TextInput
                  aria-disabled={false}
                  aria-invalid={false}
                  aria-label="One-time code"
                  aria-required={false}
                  autoComplete="one-time-code"
                  autoFocus={true}
                  editable={true}
                  inputMode="numeric"
                  multiline={false}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholderTextColor="#5E6D82"
                  returnKeyType="done"
                  secureTextEntry={false}
                  style={
                    [
                      {
                        "alignSelf": "stretch",
                        "flex": 1,
                        "fontFamily": "Inter_400Regular",
                        "fontSize": 16,
                        "margin": 0,
                        "outlineWidth": 0,
                        "paddingHorizontal": 0,
                        "paddingVertical": 0,
                      },
                      false,
                      {
                        "color": "#161C26",
                      },
                    ]
                  }
                  textAlignVertical="center"
                  textContentType="oneTimeCode"
                  value=""
                />
              </View>
              <View
                style={
                  [
                    {
                      "alignItems": "flex-start",
                      "flexDirection": "row",
                      "gap": 8,
                    },
                    false,
                  ]
                }
              >
                <View
                  aria-live="polite"
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                      "flexDirection": "row",
                      "gap": 4,
                    }
                  }
                />
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": undefined,
                    "flex": undefined,
                    "flexDirection": "column",
                    "flexWrap": undefined,
                    "gap": 8,
                    "justifyContent": undefined,
                    "padding": undefined,
                    "paddingHorizontal": undefined,
                    "paddingVertical": undefined,
                  },
                  undefined,
                ]
              }
            >
              <View
                accessibilityLabel="Verify"
                accessibilityState={
                  {
                    "busy": false,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                hitSlop={0}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                role="button"
                style={
                  [
                    {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "borderRadius": 9999,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "gap": 8,
                      "justifyContent": "center",
                    },
                    {
                      "backgroundColor": "#1A345F",
                      "borderColor": "#1A345F",
                      "minHeight": 44,
                      "paddingHorizontal": 16,
                    },
                    {
                      "alignSelf": "stretch",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Inter_600SemiBold",
                        "fontSize": 15,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#161C26",
                      },
                      undefined,
                      undefined,
                      {
                        "color": "#FFFFFF",
                      },
                    ]
                  }
                >
                  Verify
                </Text>
              </View>
              <View
                accessibilityLabel="Send a new code"
                accessibilityState={
                  {
                    "busy": false,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                hitSlop={0}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                role="button"
                style={
                  [
                    {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "borderRadius": 9999,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "gap": 8,
                      "justifyContent": "center",
                    },
                    {
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#B5BFCC",
                      "minHeight": 44,
                      "paddingHorizontal": 16,
                    },
                    {
                      "alignSelf": "stretch",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Inter_600SemiBold",
                        "fontSize": 15,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#161C26",
                      },
                      undefined,
                      undefined,
                      {
                        "color": "#1A345F",
                      },
                    ]
                  }
                >
                  Send a new code
                </Text>
              </View>
              <View
                accessibilityLabel="Use a different account"
                accessibilityState={
                  {
                    "busy": false,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                hitSlop={0}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                role="button"
                style={
                  [
                    {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "borderRadius": 9999,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "gap": 8,
                      "justifyContent": "center",
                    },
                    {
                      "backgroundColor": "transparent",
                      "borderColor": "transparent",
                      "minHeight": 44,
                      "paddingHorizontal": 12,
                    },
                    {
                      "alignSelf": "stretch",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Inter_600SemiBold",
                        "fontSize": 15,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#161C26",
                      },
                      undefined,
                      undefined,
                      {
                        "color": "#284575",
                      },
                    ]
                  }
                >
                  Use a different account
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flexGrow": 1,
                },
                {
                  "minHeight": 167.46610169491527,
                },
              ]
            }
          />
        </View>
      </RCTScrollView>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`LoginScreen sign-in form after the server refuses 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#F3F5F8",
          "flex": 1,
        },
        {
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 47,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "padding": 16,
              "paddingBottom": 50,
            },
            undefined,
          ]
        }
        keyboardShouldPersistTaps="handled"
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "paddingTop": 48,
                },
                {
                  "minHeight": 154.46610169491527,
                },
              ]
            }
          >
            <Image
              accessible={true}
              aria-label="NOMOS"
              resizeMode="contain"
              source={
                {
                  "testUri": "../../../apps/mobile/assets/nomos-logo.png",
                }
              }
              style={
                {
                  "height": 90.46610169491527,
                  "width": 400,
                }
              }
            />
          </View>
          <View
            style={
              [
                {
                  "alignItems": undefined,
                  "flex": undefined,
                  "flexDirection": "column",
                  "flexWrap": undefined,
                  "gap": 24,
                  "justifyContent": undefined,
                  "padding": undefined,
                  "paddingHorizontal": undefined,
                  "paddingVertical": undefined,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": undefined,
                    "flex": undefined,
                    "flexDirection": "column",
                    "flexWrap": undefined,
                    "gap": 4,
                    "justifyContent": undefined,
                    "padding": undefined,
                    "paddingHorizontal": undefined,
                    "paddingVertical": undefined,
                  },
                  undefined,
                ]
              }
            >
              <Text
                role="heading"
                style={
                  [
                    {
                      "fontFamily": "CormorantGaramond_700Bold",
                      "fontSize": 24,
                      "letterSpacing": -0.2,
                      "lineHeight": 32,
                    },
                    {
                      "color": "#161C26",
                    },
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                Sign in to NOMOS
              </Text>
              <Text
                style={
                  [
                    {
                      "fontFamily": "Inter_400Regular",
                      "fontSize": 16,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#4A576A",
                    },
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                Enter the email address and password for your NOMOS account.
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "flex-start",
                    "borderRadius": 8,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "gap": 12,
                    "padding": 12,
                  },
                  {
                    "backgroundColor": "#FDEEEE",
                    "borderColor": "#F4ABAB",
                  },
                  undefined,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                aria-hidden={true}
                selectable={false}
                style={
                  [
                    {
                      "color": "#8C2424",
                      "fontSize": 20,
                    },
                    [
                      false,
                      undefined,
                    ],
                    {
                      "fontFamily": "ionicons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
              <View
                style={
                  {
                    "alignItems": "flex-start",
                    "flex": 1,
                  }
                }
              >
                <View
                  accessible={true}
                  aria-live="assertive"
                  role="alert"
                  style={
                    {
                      "alignSelf": "stretch",
                      "gap": 2,
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "fontFamily": "Inter_400Regular",
                          "fontSize": 14,
                          "lineHeight": 20,
                        },
                        {
                          "color": "#161C26",
                        },
                        undefined,
                        undefined,
                        {
                          "color": "#8C2424",
                        },
                      ]
                    }
                  >
                    We could not sign you in. Check your connection and try again.
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": undefined,
                    "flex": undefined,
                    "flexDirection": "column",
                    "flexWrap": undefined,
                    "gap": 16,
                    "justifyContent": undefined,
                    "padding": undefined,
                    "paddingHorizontal": undefined,
                    "paddingVertical": undefined,
                  },
                  undefined,
                ]
              }
            >
              <View>
                <Text
                  aria-hidden={true}
                  style={
                    [
                      {
                        "fontFamily": "Inter_600SemiBold",
                        "fontSize": 15,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#161C26",
                      },
                      undefined,
                      undefined,
                      {
                        "marginBottom": 4,
                      },
                    ]
                  }
                >
                  Email address
                </Text>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 8,
                        "borderWidth": 1,
                        "flexDirection": "row",
                        "gap": 8,
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                      },
                      false,
                      {
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#5E6D82",
                      },
                      false,
                    ]
                  }
                >
                  <TextInput
                    aria-disabled={false}
                    aria-invalid={false}
                    aria-label="Email address"
                    aria-required={false}
                    autoCapitalize="none"
                    autoComplete="email"
                    autoCorrect={false}
                    editable={true}
                    inputMode="email"
                    multiline={false}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onSubmitEditing={[Function]}
                    placeholderTextColor="#5E6D82"
                    returnKeyType="next"
                    secureTextEntry={false}
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "flex": 1,
                          "fontFamily": "Inter_400Regular",
                          "fontSize": 16,
                          "margin": 0,
                          "outlineWidth": 0,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                        },
                        false,
                        {
                          "color": "#161C26",
                        },
                      ]
                    }
                    submitBehavior="submit"
                    textAlignVertical="center"
                    textContentType="username"
                    value="amara@example.org"
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "gap": 8,
                      },
                      false,
                    ]
                  }
                >
                  <View
                    aria-live="polite"
                    style={
                      {
                        "alignItems": "flex-start",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                      }
                    }
                  />
                </View>
              </View>
              <View>
                <Text
                  aria-hidden={true}
                  style={
                    [
                      {
                        "fontFamily": "Inter_600SemiBold",
                        "fontSize": 15,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#161C26",
                      },
                      undefined,
                      undefined,
                      {
                        "marginBottom": 4,
                      },
                    ]
                  }
                >
                  Password
                </Text>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 8,
                        "borderWidth": 1,
                        "flexDirection": "row",
                        "gap": 8,
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                      },
                      false,
                      {
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#5E6D82",
                      },
                      false,
                    ]
                  }
                >
                  <TextInput
                    aria-disabled={false}
                    aria-invalid={false}
                    aria-label="Password"
                    aria-required={false}
                    autoCapitalize="none"
                    autoComplete="current-password"
                    autoCorrect={false}
                    editable={true}
                    multiline={false}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onSubmitEditing={[Function]}
                    placeholderTextColor="#5E6D82"
                    returnKeyType="go"
                    secureTextEntry={true}
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "flex": 1,
                          "fontFamily": "Inter_400Regular",
                          "fontSize": 16,
                          "margin": 0,
                          "outlineWidth": 0,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                        },
                        false,
                        {
                          "color": "#161C26",
                        },
                      ]
                    }
                    textAlignVertical="center"
                    textContentType="password"
                    value="correct horse battery"
                  />
                  <View
                    accessibilityLabel="Show password"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    hitSlop={12}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    role="button"
                    style={false}
                  >
                    <Text
                      allowFontScaling={false}
                      aria-hidden={true}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#4A576A",
                            "fontSize": 20,
                          },
                          [
                            false,
                            undefined,
                          ],
                          {
                            "fontFamily": "ionicons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "gap": 8,
                      },
                      false,
                    ]
                  }
                >
                  <View
                    aria-live="polite"
                    style={
                      {
                        "alignItems": "flex-start",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                      }
                    }
                  />
                </View>
              </View>
            </View>
            <View
              accessibilityLabel="Sign in"
              accessibilityState={
                {
                  "busy": false,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={0}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="button"
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 9999,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  },
                  {
                    "backgroundColor": "#1A345F",
                    "borderColor": "#1A345F",
                    "minHeight": 44,
                    "paddingHorizontal": 16,
                  },
                  {
                    "alignSelf": "stretch",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  [
                    {
                      "fontFamily": "Inter_600SemiBold",
                      "fontSize": 15,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#161C26",
                    },
                    undefined,
                    undefined,
                    {
                      "color": "#FFFFFF",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flexGrow": 1,
                },
                {
                  "minHeight": 167.46610169491527,
                },
              ]
            }
          />
        </View>
      </RCTScrollView>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`LoginScreen sign-in form in dark mode 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#071124",
          "flex": 1,
        },
        {
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 47,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "padding": 16,
              "paddingBottom": 50,
            },
            undefined,
          ]
        }
        keyboardShouldPersistTaps="handled"
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "paddingTop": 48,
                },
                {
                  "minHeight": 154.46610169491527,
                },
              ]
            }
          >
            <Image
              accessible={true}
              aria-label="NOMOS"
              resizeMode="contain"
              source={
                {
                  "testUri": "../../../apps/mobile/assets/nomos-logo-on-dark.png",
                }
              }
              style={
                {
                  "height": 90.46610169491527,
                  "width": 400,
                }
              }
            />
          </View>
          <View
            style={
              [
                {
                  "alignItems": undefined,
                  "flex": undefined,
                  "flexDirection": "column",
                  "flexWrap": undefined,
                  "gap": 24,
                  "justifyContent": undefined,
                  "padding": undefined,
                  "paddingHorizontal": undefined,
                  "paddingVertical": undefined,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": undefined,
                    "flex": undefined,
                    "flexDirection": "column",
                    "flexWrap": undefined,
                    "gap": 4,
                    "justifyContent": undefined,
                    "padding": undefined,
                    "paddingHorizontal": undefined,
                    "paddingVertical": undefined,
                  },
                  undefined,
                ]
              }
            >
              <Text
                role="heading"
                style={
                  [
                    {
                      "fontFamily": "CormorantGaramond_700Bold",
                      "fontSize": 24,
                      "letterSpacing": -0.2,
                      "lineHeight": 32,
                    },
                    {
                      "color": "#F3F5F8",
                    },
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                Sign in to NOMOS
              </Text>
              <Text
                style={
                  [
                    {
                      "fontFamily": "Inter_400Regular",
                      "fontSize": 16,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#B5BFCC",
                    },
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                Enter the email address and password for your NOMOS account.
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": undefined,
                    "flex": undefined,
                    "flexDirection": "column",
                    "flexWrap": undefined,
                    "gap": 16,
                    "justifyContent": undefined,
                    "padding": undefined,
                    "paddingHorizontal": undefined,
                    "paddingVertical": undefined,
                  },
                  undefined,
                ]
              }
            >
              <View>
                <Text
                  aria-hidden={true}
                  style={
                    [
                      {
                        "fontFamily": "Inter_600SemiBold",
                        "fontSize": 15,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#F3F5F8",
                      },
                      undefined,
                      undefined,
                      {
                        "marginBottom": 4,
                      },
                    ]
                  }
                >
                  Email address
                </Text>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 8,
                        "borderWidth": 1,
                        "flexDirection": "row",
                        "gap": 8,
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                      },
                      false,
                      {
                        "backgroundColor": "#0C1B36",
                        "borderColor": "#5E6D82",
                      },
                      false,
                    ]
                  }
                >
                  <TextInput
                    aria-disabled={false}
                    aria-invalid={false}
                    aria-label="Email address"
                    aria-required={false}
                    autoCapitalize="none"
                    autoComplete="email"
                    autoCorrect={false}
                    editable={true}
                    inputMode="email"
                    multiline={false}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onSubmitEditing={[Function]}
                    placeholderTextColor="#8A96A7"
                    returnKeyType="next"
                    secureTextEntry={false}
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "flex": 1,
                          "fontFamily": "Inter_400Regular",
                          "fontSize": 16,
                          "margin": 0,
                          "outlineWidth": 0,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                        },
                        false,
                        {
                          "color": "#F3F5F8",
                        },
                      ]
                    }
                    submitBehavior="submit"
                    textAlignVertical="center"
                    textContentType="username"
                    value=""
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "gap": 8,
                      },
                      false,
                    ]
                  }
                >
                  <View
                    aria-live="polite"
                    style={
                      {
                        "alignItems": "flex-start",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                      }
                    }
                  />
                </View>
              </View>
              <View>
                <Text
                  aria-hidden={true}
                  style={
                    [
                      {
                        "fontFamily": "Inter_600SemiBold",
                        "fontSize": 15,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#F3F5F8",
                      },
                      undefined,
                      undefined,
                      {
                        "marginBottom": 4,
                      },
                    ]
                  }
                >
                  Password
                </Text>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 8,
                        "borderWidth": 1,
                        "flexDirection": "row",
                        "gap": 8,
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                      },
                      false,
                      {
                        "backgroundColor": "#0C1B36",
                        "borderColor": "#5E6D82",
                      },
                      false,
                    ]
                  }
                >
                  <TextInput
                    aria-disabled={false}
                    aria-invalid={false}
                    aria-label="Password"
                    aria-required={false}
                    autoCapitalize="none"
                    autoComplete="current-password"
                    autoCorrect={false}
                    editable={true}
                    multiline={false}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onSubmitEditing={[Function]}
                    placeholderTextColor="#8A96A7"
                    returnKeyType="go"
                    secureTextEntry={true}
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "flex": 1,
                          "fontFamily": "Inter_400Regular",
                          "fontSize": 16,
                          "margin": 0,
                          "outlineWidth": 0,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                        },
                        false,
                        {
                          "color": "#F3F5F8",
                        },
                      ]
                    }
                    textAlignVertical="center"
                    textContentType="password"
                    value=""
                  />
                  <View
                    accessibilityLabel="Show password"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    hitSlop={12}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    role="button"
                    style={false}
                  >
                    <Text
                      allowFontScaling={false}
                      aria-hidden={true}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#B5BFCC",
                            "fontSize": 20,
                          },
                          [
                            false,
                            undefined,
                          ],
                          {
                            "fontFamily": "ionicons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "gap": 8,
                      },
                      false,
                    ]
                  }
                >
                  <View
                    aria-live="polite"
                    style={
                      {
                        "alignItems": "flex-start",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                      }
                    }
                  />
                </View>
              </View>
            </View>
            <View
              accessibilityLabel="Sign in"
              accessibilityState={
                {
                  "busy": false,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={0}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="button"
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 9999,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  },
                  {
                    "backgroundColor": "#22BBDD",
                    "borderColor": "#22BBDD",
                    "minHeight": 44,
                    "paddingHorizontal": 16,
                  },
                  {
                    "alignSelf": "stretch",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  [
                    {
                      "fontFamily": "Inter_600SemiBold",
                      "fontSize": 15,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#F3F5F8",
                    },
                    undefined,
                    undefined,
                    {
                      "color": "#071124",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flexGrow": 1,
                },
                {
                  "minHeight": 167.46610169491527,
                },
              ]
            }
          />
        </View>
      </RCTScrollView>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`LoginScreen sign-in form in light mode 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#F3F5F8",
          "flex": 1,
        },
        {
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 47,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "padding": 16,
              "paddingBottom": 50,
            },
            undefined,
          ]
        }
        keyboardShouldPersistTaps="handled"
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "paddingTop": 48,
                },
                {
                  "minHeight": 154.46610169491527,
                },
              ]
            }
          >
            <Image
              accessible={true}
              aria-label="NOMOS"
              resizeMode="contain"
              source={
                {
                  "testUri": "../../../apps/mobile/assets/nomos-logo.png",
                }
              }
              style={
                {
                  "height": 90.46610169491527,
                  "width": 400,
                }
              }
            />
          </View>
          <View
            style={
              [
                {
                  "alignItems": undefined,
                  "flex": undefined,
                  "flexDirection": "column",
                  "flexWrap": undefined,
                  "gap": 24,
                  "justifyContent": undefined,
                  "padding": undefined,
                  "paddingHorizontal": undefined,
                  "paddingVertical": undefined,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": undefined,
                    "flex": undefined,
                    "flexDirection": "column",
                    "flexWrap": undefined,
                    "gap": 4,
                    "justifyContent": undefined,
                    "padding": undefined,
                    "paddingHorizontal": undefined,
                    "paddingVertical": undefined,
                  },
                  undefined,
                ]
              }
            >
              <Text
                role="heading"
                style={
                  [
                    {
                      "fontFamily": "CormorantGaramond_700Bold",
                      "fontSize": 24,
                      "letterSpacing": -0.2,
                      "lineHeight": 32,
                    },
                    {
                      "color": "#161C26",
                    },
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                Sign in to NOMOS
              </Text>
              <Text
                style={
                  [
                    {
                      "fontFamily": "Inter_400Regular",
                      "fontSize": 16,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#4A576A",
                    },
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                Enter the email address and password for your NOMOS account.
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": undefined,
                    "flex": undefined,
                    "flexDirection": "column",
                    "flexWrap": undefined,
                    "gap": 16,
                    "justifyContent": undefined,
                    "padding": undefined,
                    "paddingHorizontal": undefined,
                    "paddingVertical": undefined,
                  },
                  undefined,
                ]
              }
            >
              <View>
                <Text
                  aria-hidden={true}
                  style={
                    [
                      {
                        "fontFamily": "Inter_600SemiBold",
                        "fontSize": 15,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#161C26",
                      },
                      undefined,
                      undefined,
                      {
                        "marginBottom": 4,
                      },
                    ]
                  }
                >
                  Email address
                </Text>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 8,
                        "borderWidth": 1,
                        "flexDirection": "row",
                        "gap": 8,
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                      },
                      false,
                      {
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#5E6D82",
                      },
                      false,
                    ]
                  }
                >
                  <TextInput
                    aria-disabled={false}
                    aria-invalid={false}
                    aria-label="Email address"
                    aria-required={false}
                    autoCapitalize="none"
                    autoComplete="email"
                    autoCorrect={false}
                    editable={true}
                    inputMode="email"
                    multiline={false}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onSubmitEditing={[Function]}
                    placeholderTextColor="#5E6D82"
                    returnKeyType="next"
                    secureTextEntry={false}
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "flex": 1,
                          "fontFamily": "Inter_400Regular",
                          "fontSize": 16,
                          "margin": 0,
                          "outlineWidth": 0,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                        },
                        false,
                        {
                          "color": "#161C26",
                        },
                      ]
                    }
                    submitBehavior="submit"
                    textAlignVertical="center"
                    textContentType="username"
                    value=""
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "gap": 8,
                      },
                      false,
                    ]
                  }
                >
                  <View
                    aria-live="polite"
                    style={
                      {
                        "alignItems": "flex-start",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                      }
                    }
                  />
                </View>
              </View>
              <View>
                <Text
                  aria-hidden={true}
                  style={
                    [
                      {
                        "fontFamily": "Inter_600SemiBold",
                        "fontSize": 15,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#161C26",
                      },
                      undefined,
                      undefined,
                      {
                        "marginBottom": 4,
                      },
                    ]
                  }
                >
                  Password
                </Text>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 8,
                        "borderWidth": 1,
                        "flexDirection": "row",
                        "gap": 8,
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                      },
                      false,
                      {
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#5E6D82",
                      },
                      false,
                    ]
                  }
                >
                  <TextInput
                    aria-disabled={false}
                    aria-invalid={false}
                    aria-label="Password"
                    aria-required={false}
                    autoCapitalize="none"
                    autoComplete="current-password"
                    autoCorrect={false}
                    editable={true}
                    multiline={false}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onSubmitEditing={[Function]}
                    placeholderTextColor="#5E6D82"
                    returnKeyType="go"
                    secureTextEntry={true}
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "flex": 1,
                          "fontFamily": "Inter_400Regular",
                          "fontSize": 16,
                          "margin": 0,
                          "outlineWidth": 0,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                        },
                        false,
                        {
                          "color": "#161C26",
                        },
                      ]
                    }
                    textAlignVertical="center"
                    textContentType="password"
                    value=""
                  />
                  <View
                    accessibilityLabel="Show password"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    hitSlop={12}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    role="button"
                    style={false}
                  >
                    <Text
                      allowFontScaling={false}
                      aria-hidden={true}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#4A576A",
                            "fontSize": 20,
                          },
                          [
                            false,
                            undefined,
                          ],
                          {
                            "fontFamily": "ionicons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "gap": 8,
                      },
                      false,
                    ]
                  }
                >
                  <View
                    aria-live="polite"
                    style={
                      {
                        "alignItems": "flex-start",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                      }
                    }
                  />
                </View>
              </View>
            </View>
            <View
              accessibilityLabel="Sign in"
              accessibilityState={
                {
                  "busy": false,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={0}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="button"
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 9999,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  },
                  {
                    "backgroundColor": "#1A345F",
                    "borderColor": "#1A345F",
                    "minHeight": 44,
                    "paddingHorizontal": 16,
                  },
                  {
                    "alignSelf": "stretch",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  [
                    {
                      "fontFamily": "Inter_600SemiBold",
                      "fontSize": 15,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#161C26",
                    },
                    undefined,
                    undefined,
                    {
                      "color": "#FFFFFF",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flexGrow": 1,
                },
                {
                  "minHeight": 167.46610169491527,
                },
              ]
            }
          />
        </View>
      </RCTScrollView>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`LoginScreen sign-in form with nothing filled in 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#F3F5F8",
          "flex": 1,
        },
        {
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 47,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "padding": 16,
              "paddingBottom": 50,
            },
            undefined,
          ]
        }
        keyboardShouldPersistTaps="handled"
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "paddingTop": 48,
                },
                {
                  "minHeight": 154.46610169491527,
                },
              ]
            }
          >
            <Image
              accessible={true}
              aria-label="NOMOS"
              resizeMode="contain"
              source={
                {
                  "testUri": "../../../apps/mobile/assets/nomos-logo.png",
                }
              }
              style={
                {
                  "height": 90.46610169491527,
                  "width": 400,
                }
              }
            />
          </View>
          <View
            style={
              [
                {
                  "alignItems": undefined,
                  "flex": undefined,
                  "flexDirection": "column",
                  "flexWrap": undefined,
                  "gap": 24,
                  "justifyContent": undefined,
                  "padding": undefined,
                  "paddingHorizontal": undefined,
                  "paddingVertical": undefined,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": undefined,
                    "flex": undefined,
                    "flexDirection": "column",
                    "flexWrap": undefined,
                    "gap": 4,
                    "justifyContent": undefined,
                    "padding": undefined,
                    "paddingHorizontal": undefined,
                    "paddingVertical": undefined,
                  },
                  undefined,
                ]
              }
            >
              <Text
                role="heading"
                style={
                  [
                    {
                      "fontFamily": "CormorantGaramond_700Bold",
                      "fontSize": 24,
                      "letterSpacing": -0.2,
                      "lineHeight": 32,
                    },
                    {
                      "color": "#161C26",
                    },
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                Sign in to NOMOS
              </Text>
              <Text
                style={
                  [
                    {
                      "fontFamily": "Inter_400Regular",
                      "fontSize": 16,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#4A576A",
                    },
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                Enter the email address and password for your NOMOS account.
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": undefined,
                    "flex": undefined,
                    "flexDirection": "column",
                    "flexWrap": undefined,
                    "gap": 16,
                    "justifyContent": undefined,
                    "padding": undefined,
                    "paddingHorizontal": undefined,
                    "paddingVertical": undefined,
                  },
                  undefined,
                ]
              }
            >
              <View>
                <Text
                  aria-hidden={true}
                  style={
                    [
                      {
                        "fontFamily": "Inter_600SemiBold",
                        "fontSize": 15,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#161C26",
                      },
                      undefined,
                      undefined,
                      {
                        "marginBottom": 4,
                      },
                    ]
                  }
                >
                  Email address
                </Text>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 8,
                        "borderWidth": 1,
                        "flexDirection": "row",
                        "gap": 8,
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                      },
                      false,
                      {
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#AE2C2C",
                      },
                      [
                        {
                          "outlineStyle": "solid",
                          "outlineWidth": 1,
                        },
                        {
                          "outlineColor": "#AE2C2C",
                        },
                      ],
                    ]
                  }
                >
                  <TextInput
                    accessibilityHint="Enter your email address."
                    aria-disabled={false}
                    aria-invalid={true}
                    aria-label="Email address"
                    aria-required={false}
                    autoCapitalize="none"
                    autoComplete="email"
                    autoCorrect={false}
                    editable={true}
                    inputMode="email"
                    multiline={false}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onSubmitEditing={[Function]}
                    placeholderTextColor="#5E6D82"
                    returnKeyType="next"
                    secureTextEntry={false}
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "flex": 1,
                          "fontFamily": "Inter_400Regular",
                          "fontSize": 16,
                          "margin": 0,
                          "outlineWidth": 0,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                        },
                        false,
                        {
                          "color": "#161C26",
                        },
                      ]
                    }
                    submitBehavior="submit"
                    textAlignVertical="center"
                    textContentType="username"
                    value=""
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "gap": 8,
                      },
                      {
                        "marginTop": 4,
                      },
                    ]
                  }
                >
                  <View
                    aria-live="polite"
                    style={
                      {
                        "alignItems": "flex-start",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      aria-hidden={true}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#AE2C2C",
                            "fontSize": 16,
                          },
                          [
                            false,
                            {
                              "marginTop": 2,
                            },
                          ],
                          {
                            "fontFamily": "ionicons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                    <Text
                      style={
                        [
                          {
                            "fontFamily": "Inter_400Regular",
                            "fontSize": 14,
                            "lineHeight": 20,
                          },
                          {
                            "color": "#AE2C2C",
                          },
                          undefined,
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    >
                      Enter your email address.
                    </Text>
                  </View>
                </View>
              </View>
              <View>
                <Text
                  aria-hidden={true}
                  style={
                    [
                      {
                        "fontFamily": "Inter_600SemiBold",
                        "fontSize": 15,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#161C26",
                      },
                      undefined,
                      undefined,
                      {
                        "marginBottom": 4,
                      },
                    ]
                  }
                >
                  Password
                </Text>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 8,
                        "borderWidth": 1,
                        "flexDirection": "row",
                        "gap": 8,
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                      },
                      false,
                      {
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#AE2C2C",
                      },
                      [
                        {
                          "outlineStyle": "solid",
                          "outlineWidth": 1,
                        },
                        {
                          "outlineColor": "#AE2C2C",
                        },
                      ],
                    ]
                  }
                >
                  <TextInput
                    accessibilityHint="Enter your password."
                    aria-disabled={false}
                    aria-invalid={true}
                    aria-label="Password"
                    aria-required={false}
                    autoCapitalize="none"
                    autoComplete="current-password"
                    autoCorrect={false}
                    editable={true}
                    multiline={false}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onSubmitEditing={[Function]}
                    placeholderTextColor="#5E6D82"
                    returnKeyType="go"
                    secureTextEntry={true}
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "flex": 1,
                          "fontFamily": "Inter_400Regular",
                          "fontSize": 16,
                          "margin": 0,
                          "outlineWidth": 0,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                        },
                        false,
                        {
                          "color": "#161C26",
                        },
                      ]
                    }
                    textAlignVertical="center"
                    textContentType="password"
                    value=""
                  />
                  <View
                    accessibilityLabel="Show password"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    hitSlop={12}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    role="button"
                    style={false}
                  >
                    <Text
                      allowFontScaling={false}
                      aria-hidden={true}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#4A576A",
                            "fontSize": 20,
                          },
                          [
                            false,
                            undefined,
                          ],
                          {
                            "fontFamily": "ionicons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "gap": 8,
                      },
                      {
                        "marginTop": 4,
                      },
                    ]
                  }
                >
                  <View
                    aria-live="polite"
                    style={
                      {
                        "alignItems": "flex-start",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      aria-hidden={true}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#AE2C2C",
                            "fontSize": 16,
                          },
                          [
                            false,
                            {
                              "marginTop": 2,
                            },
                          ],
                          {
                            "fontFamily": "ionicons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                    <Text
                      style={
                        [
                          {
                            "fontFamily": "Inter_400Regular",
                            "fontSize": 14,
                            "lineHeight": 20,
                          },
                          {
                            "color": "#AE2C2C",
                          },
                          undefined,
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    >
                      Enter your password.
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              accessibilityLabel="Sign in"
              accessibilityState={
                {
                  "busy": false,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={0}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="button"
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 9999,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  },
                  {
                    "backgroundColor": "#1A345F",
                    "borderColor": "#1A345F",
                    "minHeight": 44,
                    "paddingHorizontal": 16,
                  },
                  {
                    "alignSelf": "stretch",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  [
                    {
                      "fontFamily": "Inter_600SemiBold",
                      "fontSize": 15,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#161C26",
                    },
                    undefined,
                    undefined,
                    {
                      "color": "#FFFFFF",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flexGrow": 1,
                },
                {
                  "minHeight": 167.46610169491527,
                },
              ]
            }
          />
        </View>
      </RCTScrollView>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
